--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
                     <a href="#"><img src="img/logo.png" alt="Escape"></a>
                 </div>
                 <input type="checkbox" class="nav-burger-checkbox" id="burger">
-                <nav role="navigation">
+                <nav>
                     <label for="burger" class="nav-burger" data-open="MENU"
                     data-close="CLOSE" onclick></label>
 
